name:                jsum
version:             0.1.0.0
synopsis:            Computes the sum total of counts from newline separated JSON objects.
description:         Please see README.rst
homepage:            http://github.com/bwbaugh/jsum#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Wesley Baugh
maintainer:          wesley@bwbaugh.com
copyright:           (c) 2016 Wesley Baugh
category:            Console, JSON, Utility
build-type:          Simple
cabal-version:       >=1.10

executable jsum
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
